solution/virtualservices/virtual-service-with-header-subsets.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-vs
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: /api
          headers:
            x-client-version:
              exact: v2
      route:
        - destination:
            host: api
            subset: v2
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api
            subset: v1
